@@ -34,7 +34,7 @@ subprojects {
 	}
 	
 	group = 'org.mini2Dx'
-	version = '4.1.0-SNAPSHOT'
+	version = '4.1.0'
 	
 	sourceCompatibility = 1.7
 	targetCompatibility = 1.7
